--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "react-router-dom": "^5.3.4",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
